--- a/index.html
+++ b/index.html
@@ -52,7 +52,17 @@
 
 				<div class="col col-2 right">
 
-					<div class="main-nav-block">
+					<div class="respmenubtn-box">
+
+						<button class="respmenubtn">					
+							<span></span>
+							<span></span>
+							<span></span>
+						</button>
+
+					</div>
+
+					<div class="main-nav-block scroll">
 						<ul class="main-nav">
 							<li><a href="about.html">Кто мы</a></li>
 							<li><a href="we_create.html">Мы создаем</a></li>
@@ -138,69 +148,69 @@
 
 					<div class="front-block">
 
-							<div class="promo-slider-block">
+						<div class="promo-slider-block">
 
-								<div class="row">
+							<div class="row">
 
-									<div class="promo-slider">
+								<div class="promo-slider">
 
-										<div class="slide">
-											<div class="two-cols clearfix">
-												<div class="col col-1 left">
-													<div class="slide-logo">
-														<img src="img/logo_white.png" alt="">
-													</div>
-												</div>
-
-												<div class="col col-2 right">
-
-													<h1>Вдохновляющие события<br /> успешных компаний</h1>
-
-													<div class="promo-thumbs-block">
-
-														<ul class="promo-thumbs">
-
-															<li><a href="#">Meetings</a></li>
-															<li><a href="#">Incetives</a></li>
-															<li><a href="#">Conference</a></li>
-															<li><a href="#">Events</a></li>
-
-														</ul>
-
-													</div>
-
+									<div class="slide">
+										<div class="two-cols clearfix">
+											<div class="col col-1 left">
+												<div class="slide-logo">
+													<img src="img/logo_white.png" alt="">
 												</div>
 											</div>
-										</div>
 
-										<div class="slide">
-											<div class="two-cols clearfix">
-												<div class="col col-1 left">
-													<div class="slide-logo">
-														<img src="img/logo_white.png" alt="">
-													</div>
-												</div>
+											<div class="col col-2 right">
 
-												<div class="col col-2 right">
+												<h1>Вдохновляющие события<br /> успешных компаний</h1>
 
-													<h1>Вдохновляющие события<br /> успешных компаний</h1>
+												<div class="promo-thumbs-block">
 
-													<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-													tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-													quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-													consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-													cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-													proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+													<ul class="promo-thumbs">
+
+														<li><a href="#">Meetings</a></li>
+														<li><a href="#">Incetives</a></li>
+														<li><a href="#">Conference</a></li>
+														<li><a href="#">Events</a></li>
+
+													</ul>
 
 												</div>
+
 											</div>
 										</div>
+									</div>
 
+									<div class="slide">
+										<div class="two-cols clearfix">
+											<div class="col col-1 left">
+												<div class="slide-logo">
+													<img src="img/logo_white.png" alt="">
+												</div>
+											</div>
+
+											<div class="col col-2 right">
+
+												<h1>Вдохновляющие события<br /> успешных компаний</h1>
+
+												<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+												tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+												quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+												consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+												cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+												proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+											</div>
+										</div>
 									</div>
 
 								</div>
 
-							</div>						
+							</div>
+
+						</div>						
 
 					</div>
 
@@ -239,6 +249,12 @@
 
 									<div class="slide">
 
+										<div class="img-box">
+
+											<img class="article-photo" src="img/photo.jpg" alt="" />
+
+										</div>
+
 										<div class="article">
 
 											<div class="inner">
@@ -257,17 +273,17 @@
 
 											</div>
 
-										</div>
+										</div>										
+
+									</div>
+
+									<div class="slide">
 
 										<div class="img-box">
 
 											<img class="article-photo" src="img/photo.jpg" alt="" />
 
 										</div>
-
-									</div>
-
-									<div class="slide">
 
 										<div class="article">
 
@@ -287,13 +303,7 @@
 
 											</div>
 
-										</div>
-
-										<div class="img-box">
-
-											<img class="article-photo" src="img/photo.jpg" alt="" />
-
-										</div>
+										</div>										
 
 									</div>
 
@@ -385,11 +395,16 @@
 
 			<!-- Slide 3 -->
 
-				<div class="slide-page slide-3 slide-left-bg active">
+				<div class="slide-page slide-3 slide-left-bg">
 
-					<div class="center">
+					<!-- <div class="center"> -->
 
 						<div class="row">
+
+							<div class="h-block-right align-right">
+								<h2>Проекты</h2>
+								<h3>MICE</h3>
+							</div>
 
 							<div class="slide-page-header">
 
@@ -401,16 +416,13 @@
 									<li><a href="#">Деловой</a></li>
 								</ul>
 
-							</div>
-
-							<div class="h-block-right align-right">
-								<h2>Проекты</h2>
-								<h3>MICE</h3>
-							</div>
+							</div>							
 
 							<div class="articles-slider-2-block">
 
-								<div class="parent-slider-block">
+								<div class="parent-slider-block scroll">
+
+									<button type="button" class="close-slider"></button>
 									
 									<div class="parent-slider parent_slider" data-parent-slider = "slider_2">
 										
@@ -420,12 +432,6 @@
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
@@ -433,17 +439,17 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
 														</div>
 													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
+														</div>
+													</div>											
 
 												</div>
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
@@ -451,6 +457,12 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
 														</div>
 													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
+														</div>
+													</div>													
 
 												</div>
 
@@ -479,17 +491,35 @@
 
 												<div class="slide clearfix">
 
+													<div class="col col-2 right">
+														<div class="article">
+															<h3>Mice forum Sochi 2017</h3>
+															<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat sunt in culpa qui officia deserunt nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatm accusantium.</p>
+															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
+														</div>
+													</div>
+
 													<div class="col col-1 left">
 														<div class="img-box">
 															<img src="img/photo_02.jpg" alt="" />
 														</div>
-													</div>
+													</div>													
+
+												</div>
+
+												<div class="slide clearfix">
 
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
 															<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat sunt in culpa qui officia deserunt nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatm accusantium.</p>
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
+														</div>
+													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
 														</div>
 													</div>
 
@@ -497,12 +527,6 @@
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
@@ -510,17 +534,17 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
 														</div>
 													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
+														</div>
+													</div>												
 
 												</div>
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
@@ -529,23 +553,11 @@
 														</div>
 													</div>
 
-												</div>
-
-												<div class="slide clearfix">
-
 													<div class="col col-1 left">
 														<div class="img-box">
 															<img src="img/photo_02.jpg" alt="" />
 														</div>
-													</div>
-
-													<div class="col col-2 right">
-														<div class="article">
-															<h3>Mice forum Sochi 2017</h3>
-															<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat sunt in culpa qui officia deserunt nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatm accusantium.</p>
-															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
-														</div>
-													</div>
+													</div>													
 
 												</div>
 
@@ -574,12 +586,6 @@
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
@@ -587,22 +593,28 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
 														</div>
 													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
+														</div>
+													</div>												
 
 												</div>
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
 															<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat sunt in culpa qui officia deserunt nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatm accusantium.</p>
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
+														</div>
+													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
 														</div>
 													</div>
 
@@ -633,12 +645,6 @@
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
@@ -646,17 +652,17 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
 														</div>
 													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
+														</div>
+													</div>													
 
 												</div>
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
@@ -664,17 +670,17 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
 														</div>
 													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
+														</div>
+													</div>												
 
 												</div>
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
@@ -682,17 +688,17 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
 														</div>
 													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
+														</div>
+													</div>													
 
 												</div>
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
@@ -700,6 +706,12 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
 														</div>
 													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
+														</div>
+													</div>												
 
 												</div>
 
@@ -728,12 +740,6 @@
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
@@ -741,17 +747,17 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
 														</div>
 													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
+														</div>
+													</div>													
 
 												</div>
 
 												<div class="slide clearfix">
 
-													<div class="col col-1 left">
-														<div class="img-box">
-															<img src="img/photo_02.jpg" alt="" />
-														</div>
-													</div>
-
 													<div class="col col-2 right">
 														<div class="article">
 															<h3>Mice forum Sochi 2017</h3>
@@ -759,6 +765,12 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magnayan aliqua. Ut enim minim veniam, quis nostrud exercitation.</p>
 														</div>
 													</div>
+
+													<div class="col col-1 left">
+														<div class="img-box">
+															<img src="img/photo_02.jpg" alt="" />
+														</div>
+													</div>													
 
 												</div>
 
@@ -851,7 +863,7 @@
 
 						</div>
 
-					</div>
+					<!-- </div> -->
 
 				</div>
 
